# My-Projects

./: BENCHMARK_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOMEPAGE_IMPROVEMENTS.md  README.md  Roadmap.md  SECURITY.md  audit.toml  malformed.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  simple-index.html  test_output.csv
benches/: arrow_aggregate_benchmarks.rs  arrow_benchmarks.rs  arrow_filter_benchmarks.rs  arrow_math_benchmarks.rs  arrow_series_comparison.rs  arrow_simd_benchmark.rs  arrow_string_benchmarks.rs  comprehensive_benchmarks.rs  comprehensive_final_benchmark.rs  core_operations_bench.rs  correlation_bench.rs  csv_read_bench.rs  expression_fusion_bench.rs  expression_fusion_benchmark.rs  global_aggregate_bench.rs  global_sort_bench.rs  groupby_sum_bench.rs  join_bench.rs  json_io_bench.rs  large_test_data.rs  median_bench.rs  memory_pool_benchmark.rs  parallel_group_by_benchmark.rs  pca_bench.rs  percentile_bench.rs  performance_benchmarks.rs  quantile_bench.rs  simd_benchmarks.rs  window_ranking_bench.rs
bindings/python/: mod.rs
docs/: API_GUIDE.md  ASYNC_JSON_GUIDE.md  GETTING_STARTED.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PERFORMANCE_FIX_IMPLEMENTATION_PLAN.md  PERFORMANCE_OPTIMIZATIONS.md  TUTORIAL.md  VELOXX_OPTIMIZATION_MASTER_PLAN.md
docs-site/: GITHUB_THEME_IMPLEMENTATION.md  JAVASCRIPT_API_README.md  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js
docs-site/docs/: intro.md  performance-analysis.md
docs-site/docs/api/: javascript.md  python.md  rust.md
docs-site/docs/getting-started/: installation.md  quick-start.md
docs-site/docs/performance/: benchmark-report.md  benchmarks.md  competitive-benchmarks.md  cross-language-analysis.md  features.md
docs-site/docs/tutorials/: async_json.md  customer_purchase_analysis.md  general_tutorial.md
docs-site/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs-site/src/components/PerformanceComparison/: PerformanceComparison.module.css  index.tsx
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
docs-site/static/img/: README.md
docs/js/: index.html
docs/python/source/: advanced.rst  api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  tutorial.rst
examples/: advanced_io.rs  arrow_performance_test.rs  basic_dataframe_operations.rs  customer_purchase_analysis.rs  data_quality_validation.rs  data_visualization.rs  dataframe_aggregation_and_stats.rs  dataframe_manipulation.rs  large_sample.csv  machine_learning.rs  sample.csv  test.csv  test.json  time_series_analysis.rs  window_functions_analytics.rs
examples/data/: purchases.csv  users.csv
github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md  dependabot.yml  release.yml
github/ISSUE_TEMPLATE/: bug_report.md  config.yml
github/workflows/: README.md  ci.yml  docs-deploy.yml  docs.yml  release.yml
github/workflows-backup/: ci.yml  code_quality.yml  docs.yml  release.yml
pkg/: LICENSE  README.md  package.json  veloxx_bg.wasm.d.ts
python/benchmarks/: generate_large_csv.py  python_benchmark.py  veloxx_python_api.py
python/tests/: test_basic.py  test_veloxx.py
scripts/: build-docs-local.bat  build-docs-local.sh  local-ci.bat  local-ci.sh  validate-ci.bat  validate-ci.sh
src/: advanced_io.rs  audit.rs  conditions.rs  data_quality.rs  distributed.rs  error.rs  expression.rs  expressions.rs  lazy.rs  lib.rs  lib_backup.rs  lib_fixed.rs  ml.rs  python_bindings.rs  types.rs  visualization.rs  wasm_bindings.rs  window_functions.rs
src/analytics/: pca.rs
src/arrow/: aggregate.rs  array.rs  dataframe.rs  filter.rs  filter_test.rs  mod.rs  ops.rs  series.rs  simd.rs  simd_enhanced.rs  string_ops.rs
src/dataframe/: cleaning.rs  display.rs  group_by.rs  io.rs  join.rs  manipulation.rs  mod.rs  sources.rs  time_series.rs
src/distributed/: global_aggregate.rs  global_sort.rs
src/io/: arrow.rs  csv.rs  json.rs  mmap_csv.rs  mod.rs
src/lazy/: optimizer.rs
src/performance/: advanced_memory_pool.rs  advanced_parallel.rs  arrow_simd.rs  cache_optimization.rs  expression_fusion.rs  fast_filter.rs  fast_groupby.rs  global_aggregate.rs  memory.rs  memory_compression.rs  memory_pool.rs  mod.rs  optimized_simd.rs  parallel.rs  parallel_framework.rs  parallel_group_by.rs  series_ext.rs  simd.rs  simd_std.rs  simd_string.rs  specialized_structures.rs  ultra_fast_filter.rs  ultra_fast_groupby.rs  ultra_fast_join.rs  vectorized_filter.rs
src/quality/: mod.rs
src/query/: mod.rs  mod_fixed.rs
src/series/: aggregations.rs  arithmetic.rs  mod.rs  ops.rs  time_series.rs
src/wasm_bindings/: mod.rs
tests/: advanced_io_test.rs  arrow_aggregate_test.rs  arrow_dataframe_test.rs  arrow_filter_test.rs  arrow_math_test.rs  arrow_string_test.rs  audit_test.rs  conditions_test.rs  data_quality.rs  dataframe_integration.rs  dataframe_select_test.rs  dataframe_test.rs  distributed_test.rs  drop_nulls_test.rs  e2e_workflow_test.rs  error_test.rs  expression_test.rs  expressions_test.rs  high_performance_test.rs  io_test.rs  join_test.rs  ml_test.rs  performance_test.rs  sample_data.csv  test_conditions.rs  test_correlation.py  test_csv_escaped_quotes.py  test_global_aggregate.py  test_global_sort.py  test_groupby_sum.py  test_median.py  test_pca.py  test_percentile.py  test_pygroupeddataframe.py  test_python_grouped_agg.py  test_quantile.py  test_window_ranking.py  types_test.rs  unified_series_test.rs  visualization_test.rs  (+5 more)
tests/python/: test_basic.py  test_veloxx.py  test_veloxx_updated.py
vscode/: tasks.json
