[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "veloxx"
description = "Veloxx: High-performance, lightweight Python library for in-memory data processing and analytics. Built on Rust for blazing speed and memory efficiency. Features DataFrames, Series, advanced I/O (CSV, JSON, Parquet), machine learning (linear regression, K-means, logistic regression), time-series analysis, data visualization, and parallel processing. Perfect for data science, analytics, and performance-critical applications where speed and memory usage matter."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Conqxeror", email = "conqxeror@gmail.com"}
]
keywords = ["dataframe", "analytics", "data-processing", "machine-learning", "time-series", "statistics", "csv", "json", "parquet", "visualization", "rust", "performance", "parallel", "data-science", "pandas-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Conqxeror/veloxx"
Repository = "https://github.com/Conqxeror/veloxx"

[tool.maturin]
features = ["python"]
module-name = "veloxx"